# analysis-pqc

./: .gitignore  README.md  all.out  analyse_pqc_functions.py  cmsdbldr_client.py  requirements.txt  setup.cfg  setup.py  tox.ini  upload_db.py
.github/workflows/: python-package.yml
analysis_pqc/: __init__.py
examples/: analysis_example.py
latex_example_presentation/Presentation_VPX35496/: main.tex
pqc_analysis_scripts/: pqc_analysis_json.py  pqc_analysis_tools.py  pqc_analysis_txt.py  txt2json.py
scripts/: .PQC_specs.yml.swp  .flute_analysis.py.swp  1  12  @  PQC_specs.yml  \  analysis_pqc.py  flute_analysis.py  full_line.py  pqc_analysis_json.py  pqc_analysis_tools.py  pqc_analysis_txt.py  pqc_rawdata.py  pqc_resultset.py  pqc_values.py  requirements.txt  txt2json.py  txt2json.sh  upload_db.py
scripts/config/: default.yaml  default_HGC_120.yaml  default_HGC_200.yaml  default_HGC_300.yaml
scripts/ext/: README.md  readme_ext
scripts/template-include/: latex.tex
scripts/templates/: Bulk_cross.xml  Capacitor_test_structure_Left_10kHz_250mV_HV_Source.xml  Capacitor_test_structure_Right_10kHz_250mV_HV_Source.xml  Dielectric_Breakdown_1.xml  Diode_CV.xml  Diode_IV.xml  FET.xml  GCD05.xml  MOS_capacitor_HV_Source.xml  Metal_clover_leaf_Van-der-Pauw.xml  Metal_meander.xml  N_CBKR.xml  N_contact_chain.xml  N_linewidth_structure.xml  P-stop_linewidth_structure_2-wire.xml  P-stop_linewidth_structure_4-wire.xml  P_cross-bridge_linewidth.xml  Polysilicon_CBKR.xml  Polysilicon_contact_chain.xml  Polysilicon_meander.xml  (+15 more)
tests/: analysis_pqc.py  test_analysis_pqc.py
(+19 files in other folders)
