[metadata]
name = analysis-pqc
version = attr: analysis_pqc.__version__
description = Analysis for PQC measurements
long_description = file: README.md
long_description_content_type = text/markdown
author = Bernhard Arnold
author_email = bernhard.arnold@oeaw.ac.at
url = https://github.com/hephy-dd/analysis-pqc
license = GPLv3
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
packages = find:
install_requires =
    numpy
    scipy
test_suite = tests

[options.packages.find]
exclude = tests

[flake8]
ignore = E501
exclude =
    .git
    __pycache__
    env
    # external modules yield errors
    scripts/ext

[tool:pytest]
pythonpath = .
testpaths = tests
